<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/tv_title"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/llName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvNameTitle"
            style="@style/style_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_name_title" />

        <TextView
            android:id="@+id/tvName"
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tv_name_example" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvSurnameTitle"
            style="@style/style_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_surname_title" />

        <TextView
            android:id="@+id/tvSurname"
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/style_surname_example" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvEmailTitle"
            style="@style/style_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_email_title" />

        <TextView
            android:id="@+id/tvEmail"
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tv_email_example" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvLoginTitle"
            style="@style/style_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_login_title" />

        <TextView
            android:id="@+id/tvLogin"
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tv_login_example" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/clRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvRegionTitle"
            style="@style/style_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/tv_region_title" />

        <TextView
            android:id="@+id/tvRegion"
            style="@style/style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRegionTitle"
            android:layout_alignParentStart="true"
            tools:text="@string/tv_region_example" />

        <ImageButton
            android:id="@+id/btnEditRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_edit" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_logout"
            android:contentDescription="@string/btn_logout_desc" />

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_toEndOf="@id/btnLogout"
            android:text="@string/tv_logout"
            android:textColor="@color/gray_dark" />
    </RelativeLayout>

</LinearLayout>