<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/btnWithoutConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_without_constraint" />

    <Button
        android:id="@+id/btnConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_constraint" />

    <Button
        android:id="@+id/btnCoordinator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_coordinator" />


</LinearLayout>