<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu"
            app:navigationIcon="@drawable/ic_navigation_arrow"
            app:title="@string/toolbar_title"
            app:titleTextColor="?attr/colorOnPrimary" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:id="@+id/toolbarCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/ivAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:srcCompat="@drawable/ic_avatar"
                    android:contentDescription="@string/iv_avatar_desc" />

                <LinearLayout
                    android:id="@+id/llCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_toEndOf="@id/ivAvatar"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCardNumber"
                        style="@style/style_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_card_number" />

                    <TextView
                        android:id="@+id/tvCardJob"
                        style="@style/style_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_card_job" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/view_simple_sample" />
    </androidx.core.widget.NestedScrollView>
</LinearLayout>